# keel

./: .gitignore  LICENSE  README.md  chat.py  exp_hybrid_recall.py  pyproject.toml
my_agent_llms/agents/: function_call_agent.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
my_agent_llms/bench/: case.py  default_factory.py  report.py  run.py  runner.py  scorer.py
my_agent_llms/cli/: __init__.py  app.py  banner.py  chat_view.py  completer.py  console.py  help_view.py  key_listener.py  live_session.py  markdown_render.py  permission.py  permission_grants.py  prompt.py  scrollback_renderer.py  status_bar.py  theme.py  thinking.py
my_agent_llms/context/: __init__.py
my_agent_llms/core/: agent.py  hooks.py  llm.py
my_agent_llms/memory/: __init__.py  base.py  cold.py  config.py  conflict.py  context_engine.py  embeddings.py  item.py  kg.py  kg_reconcile.py  kg_vocab.py  maintenance.py  manager.py  project_root.py  promotion_ledger.py  recall_buffer.py  seed_score.py  semantic.py  summary.py  user_layer.py  working.py
my_agent_llms/planning/: __init__.py  todo.py
my_agent_llms/tdd/: __init__.py  classify.py  gates.py  orchestrator.py  runner.py  test_author.py
my_agent_llms/test/: manual_agent_demo.py  test_app_entry.py  test_app_grants_wired.py  test_app_project_storage.py  test_app_search_tools.py  test_app_verify_wiring.py  test_approval_box.py  test_attach_file.py  test_bash_tool.py  test_bench_core.py  test_cc_render_polish.py  test_cli_banner.py  test_cli_chat_view.py  test_cli_completer.py  test_cli_help_view.py  test_glob.py  (+72 more)
(+47 files in other folders)
